# mqlqd

./: .clang-format  .clang-tidy  .drmemory_suppress  .editorconfig  .gitignore  .rgignore  CMakeLists.txt  LICENSE  README
.github/workflows/: ci_linux.yml  ci_macos.yml  cicd_cmake_multi_platform.yml  cmake-multi-platform.yml  release.yml  rsbl_build_ci.yml
cmake/: GTest.cmake  comp_opts_cxx.cmake  cxxopts.cmake  fmt.cmake  funcs.cmake  gtest.cmake  mqlqdConfig.cmake.in  wndx_sane_create_targets.cmake  wndx_sane_find.cmake  wndx_sane_install.cmake
include/mqlqd/: LogUrgencyLevel.hpp  aliases.hpp  client.hpp  config.hpp  fclient.hpp  file.hpp  fserver.hpp  log.hpp  log_level.hpp  op.hpp  sig_handler.hpp  sig_to_str.hpp  socket.hpp  structs_net_soc.hpp
include/wndx/mqlqd/: aliases.hpp  config.hpp  fclient.hpp  file.hpp  fserver.hpp  rc.hpp  sig_handler.hpp  sig_to_str.hpp
scripts/: build.sh  wndx_cmake_build.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client_cmd.cpp  cmd.cpp  fclient.cpp  file.cpp
src/common/: CMakeLists.txt  fclient.cpp  file.cpp  fserver.cpp  log.cpp  op.cpp  sig_handler.cpp
src/daemon/: CMakeLists.txt  cmd.cpp  daemon.cpp  daemon_cmd.cpp  fserver.cpp
src/mqlqd/client/: CMakeLists.txt  client.cpp  client_cmd.cpp  fclient.cpp
src/mqlqd/common/: CMakeLists.txt  file.cpp  sig_handler.cpp
src/mqlqd/daemon/: daemon.cpp  daemon_cmd.cpp  fserver.cpp
src/wndx/mqlqd/client/: client.cpp  client_cmd.cpp  fclient.cpp
src/wndx/mqlqd/common/: CMakeLists.txt  file.cpp  sig_handler.cpp  unix_sig.cpp
src/wndx/mqlqd/daemon/: CMakeLists.txt  daemon.cpp  daemon_cmd.cpp  fserver.cpp
tests/units/: CMakeLists.txt  file.t.cpp
